kubernetes/reddit/ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: reddit
    component: ui
spec:
  type: NodePort
  ports:
  - port: 9292
    protocol: TCP
    targetPort: 9292
  selector:
    app: reddit
    component: ui
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 80
#     nodePort: 32092
#     protocol: TCP
#     targetPort: 9292
#   selector:
#     app: reddit
#     component: ui
