kubernetes/reddit/mongo-network-policy.yml

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-db-traffic
  labels:
    app: reddit
spec:
  podSelector: # Выбираем объекты
    matchLabels:
      app: reddit
      component: mongo
  policyTypes: # Блок запрещающих направлений - Запрещаем все входящиеподключения, исходящие разрешены
    - Ingress
  ingress: # Блок разрешающих правил (белый список) - Разрешены все входящие подключения от POD-ов с lebel-ами comment и post
  - from:
    - podSelector: 
        matchLabels:
          app: reddit
          component: comment
    - podSelector:
        matchLabels:
          app: reddit
          component: post
